--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 /*     padding: 0; */
 
 }
+
 html {
 
     font-family: sans-serif;
@@ -40,3 +41,11 @@ html {
 
 }
  
+ul {
+    line-height: 30%;
+}
+
+
+.button {
+  font-size: 20px;
+}
